[package]
name = "slisten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.1.8", features = ["derive"] }
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
thiserror = "1.0.40"
